@@ -1,3 +1,12 @@
+2011-12-19  William A. Perkins  <william.perkins@pnnl.gov>
+
+	* plot_cgns.f90: #ifdef around the actual file operations, so
+	block variable reductions can be performed with output
+
+	* hotstart.f90 (restart_write_var, write_restart): #ifdef around
+	the actual file operations, so block variable reductions can be
+	performed with output
+
 2011-12-05  William A. Perkins  <william.perkins@pnnl.gov>
 
 	* plot_cgns.f90 (plot_cgns_write): make water surface elevation a
